[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/info_dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/hud.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/pause_dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/raw_game_state_dlg.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/CooperHewitt-Medium.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/ui/saving_icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AutoSaveTextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AutoSaveTextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "disk_exit"
tracks/0/type = "value"
tracks/0/path = NodePath("AutoSaveTextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AutoSaveTextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="InventoryMarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -60.0
custom_constants/margin_right = 20
custom_constants/margin_bottom = 20

[node name="Inventory" parent="InventoryMarginContainer" instance=ExtResource( 4 )]
margin_right = 20.0

[node name="InfoDialog" parent="." instance=ExtResource( 1 )]

[node name="RawGameStateDlg" parent="." instance=ExtResource( 5 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseDialog" parent="Control" instance=ExtResource( 3 )]
visible = false

[node name="RawGameStateDlg" parent="Control" instance=ExtResource( 5 )]

[node name="DebugMarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -60.0
margin_right = 160.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DebugMarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 140.0
margin_bottom = 40.0

[node name="ViewGameStateBtn" type="Button" parent="DebugMarginContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "View Game State"

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AutoSaveMarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_bottom = 104.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="AutoSaveTextureRect" type="TextureRect" parent="AutoSaveMarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 84.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 7 )

[node name="AutoSaveAnimationPlayer" type="AnimationPlayer" parent="AutoSaveMarginContainer"]
anims/RESET = SubResource( 2 )
anims/disk_exit = SubResource( 3 )

[connection signal="pressed" from="DebugMarginContainer/VBoxContainer/ViewGameStateBtn" to="." method="_on_ViewGameStateBtn_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="animation_finished" from="AutoSaveMarginContainer/AutoSaveAnimationPlayer" to="." method="_on_AutoSaveAnimationPlayer_animation_finished"]
